Layout issues

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -28,9 +28,12 @@ body {
 }
 
 .container {
-  padding-top: 50px;
+  margin-top: 50px;
 }
 
+.welcome-background {
+  margin-top: 50px;
+}
 .title {
   font-family: 'Droid Sans', sans-serif;
   font-weight: bold;
